fix(components): accordion overflow from auto to visible | mh / as | #13333

--- a/packages/components/src/components/content/accordion/accordion.scss
+++ b/packages/components/src/components/content/accordion/accordion.scss
@@ -108,7 +108,7 @@ button {
     height: auto;
     padding-bottom: $p-spacing-40;
     visibility: visible;
-    overflow: auto;
+    overflow: visible;
     transition: height $p-animation-hover-duration-var $p-animation-hover-bezier,
       visibility $p-animation-hover-duration-var;
   }
